src/test/ui/issues/issue-XXXX/issue-3044.stderr
error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/issue-3044.rs:3:23
   |
LL |       needlesArr.iter().fold(|x, y| {
   |  _______________________^^^^_-
   | |                       |
   | |                       expected 2 arguments
LL | |     });
   | |_____- supplied 1 argument
   |
note: associated function defined here
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn fold<B, F>(mut self, init: B, mut f: F) -> B
   |        ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
